// Vitest Snapshot v1

exports[`<OffersForm> > renders and matches snapshot 1`] = `
<div>
  <form
    data-testid="choose-offer-form"
    novalidate=""
  >
    <h2
      class="title"
    >
      choose_offer.title
    </h2>
    <h3
      class="subtitle"
    >
      choose_offer.watch_this_on_platform
    </h3>
    <div
      class="offerGroupSwitch"
    >
      <input
        checked=""
        class="radio"
        id="svod"
        name="offerType"
        type="radio"
        value="svod"
      />
      <label
        class="label offerGroupLabel"
        for="svod"
      >
        choose_offer.subscription
      </label>
      <input
        class="radio"
        id="tvod"
        name="offerType"
        type="radio"
        value="tvod"
      />
      <label
        class="label offerGroupLabel"
        for="tvod"
      >
        choose_offer.one_time_only
      </label>
    </div>
    <div
      class="offers"
    >
      <div
        class="offer"
      >
        <input
          aria-label="choose_offer.monthly_subscription"
          checked=""
          class="radio"
          id="S916977979_NL"
          name="offerId"
          type="radio"
          value="S916977979_NL"
        />
        <label
          class="label"
          for="S916977979_NL"
        >
          <h4
            class="offerTitle"
          >
            choose_offer.monthly
          </h4>
          <hr
            class="offerDivider"
          />
          <ul
            class="offerBenefits"
          >
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.first_periods_free
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.cancel_anytime
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.watch_on_all_devices
            </li>
          </ul>
          <div
            class="fill"
          />
          <div
            class="offerPrice"
          >
            € 6,99
             
            <small>
              /
              periods.month
            </small>
          </div>
        </label>
      </div>
      <div
        class="offer"
      >
        <input
          aria-label="choose_offer.yearly_subscription"
          class="radio"
          id="S345569153_NL"
          name="offerId"
          type="radio"
          value="S345569153_NL"
        />
        <label
          class="label"
          for="S345569153_NL"
        >
          <h4
            class="offerTitle"
          >
            choose_offer.yearly
          </h4>
          <hr
            class="offerDivider"
          />
          <ul
            class="offerBenefits"
          >
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.first_days_free
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.cancel_anytime
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.watch_on_all_devices
            </li>
          </ul>
          <div
            class="fill"
          />
          <div
            class="offerPrice"
          >
            € 50,00
             
            <small>
              /
              periods.year
            </small>
          </div>
        </label>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="button primary fullWidth"
      type="submit"
    >
      <span>
        choose_offer.continue
      </span>
    </button>
  </form>
</div>
`;

exports[`<OffersForm> > renders and matches snapshot 2`] = `
<div>
  <form
    data-testid="choose-offer-form"
    novalidate=""
  >
    <h2
      class="title"
    >
      choose_offer.title
    </h2>
    <h3
      class="subtitle"
    >
      choose_offer.watch_this_on_platform
    </h3>
    <div
      class="offerGroupSwitch"
    >
      <input
        class="radio"
        id="svod"
        name="offerType"
        type="radio"
        value="svod"
      />
      <label
        class="label offerGroupLabel"
        for="svod"
      >
        choose_offer.subscription
      </label>
      <input
        checked=""
        class="radio"
        id="tvod"
        name="offerType"
        type="radio"
        value="tvod"
      />
      <label
        class="label offerGroupLabel"
        for="tvod"
      >
        choose_offer.one_time_only
      </label>
    </div>
    <div
      class="offers"
    >
      <div
        class="offer"
      >
        <input
          aria-label="One Time - TVOD offer"
          checked=""
          class="radio"
          id="R892134629_NL"
          name="offerId"
          type="radio"
          value="R892134629_NL"
        />
        <label
          class="label"
          for="R892134629_NL"
        >
          <h4
            class="offerTitle"
          >
            One Time - TVOD offer
          </h4>
          <hr
            class="offerDivider"
          />
          <ul
            class="offerBenefits"
          >
            <li>
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.watch_on_all_devices
            </li>
          </ul>
          <div
            class="fill"
          />
          <div
            class="offerPrice"
          >
            € 2,90
             
          </div>
        </label>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="button primary fullWidth"
      type="submit"
    >
      <span>
        choose_offer.continue
      </span>
    </button>
  </form>
</div>
`;
